Add helpers and spec for likes and comments

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,7 +2,7 @@
 
 <section class="singleUser--section">
 <ul class="userProfile">
-<h1>User Posts </h1>
+<h1>You are viewig <%= @user.name %> posts </h1>
     <ul class="User">
       <li class="userImage">
         <img src=<%= @user.photo %> alt="UserImage"></li>
