--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,7 @@
 
 <ul class="singleUserOnePost">
   <h1>Selected post</h1>
+  <%= link_to "Back to posts", user_path(id: @post.user_id), class: "addCom" %>
   <div class="singlePost">
     <h4><%= @post.title %></h4>
     <p><%= @post.text %></p>
@@ -13,7 +14,7 @@
   <div class="singleComment">
     <h4>Comments:</h4>
     <ul>
-      <% @post.comments.each do |comment| %>
+      <% @post.comments.includes(:user).each do |comment| %>
         <p><%= comment.user.name %>: <%= comment.text %></p>
       <% end %>
     </ul>
