--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
 
   <body>
+    <% flash.each do |name, msg| -%>
+      <p class="bg-green"><%= msg %></p>
+    <% end -%>
     <%= yield %>
   </body>
 </html>
