--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   </head>
 
   <body>
+  <%= render partial: 'layouts/navbar' %>
     <% flash.each do |name, msg| -%>
       <p class="bg-green"><%= msg %></p>
     <% end -%>
